--- a/src/components/Project/ProjectDetails.css
+++ b/src/components/Project/ProjectDetails.css
@@ -1,7 +1,7 @@
 .tooltip {
   position: absolute;
-  bottom: 120%;
-  left: 50%;
+  bottom: 25%;
+  left: 60%;
   transform: translateX(-50%);
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
@@ -14,7 +14,7 @@
   transition: opacity 0.2s, visibility 0.2s;
 }
 
-.btn:hover .tooltip {
+.link-icon:hover .tooltip {
   opacity: 1;
   visibility: visible;
 }
